# residential-energy-intelligence-agent

./: README.md  pyproject.toml
backend/: .env.example  main.py  pyproject.toml
backend/src/: __init__.py  config.py
backend/src/routes/: agent.py  alerts.py  anomalies.py  behavior.py  dashboard.py  data_processing.py  jobs.py  patterns.py  recommendations.py  reports.py  simulations.py  statistics.py
backend/tests/: test_cuda.py
doc/: api_specification.md  chinese_project.md  task.md
frontend/: package-lock.json  package.json
